<resources>
    <string name="app_name">My Health</string>
    <string name="title_home">Нүүр</string>
    <string name="title_dashboard">Дэлгэрэнгүй</string>
    <string name="title_diet">Дэглэм</string>
    <string name="title_water">Ус</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_settings">Тохиргоо</string>
    <string name="kilogram">кг</string>
    <string name="overweight">Илүүдэл жинтэй</string>
    <string name="right_symbol"><![CDATA[>]]></string>
    <string name="left_symbol"><![CDATA[<]]></string>
    <string name="kcal">ККАЛ</string>
</resources>
